--- a/package.json
+++ b/package.json
@@ -16,16 +16,26 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
+    "ejs": "^4.0.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "install": "^0.13.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.10.1",
+    "nodemailer": "^8.0.1",
+    "npm": "^11.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/nodemailer": "^7.0.9"
   }
 }
